--- a/src/global.css
+++ b/src/global.css
@@ -14,7 +14,7 @@
 }
 
 body {
-  background-color: #0e0e0e;
+  background-color: #fafafa;
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
   padding: 20px 20px 40px 20px;
 }
@@ -22,7 +22,7 @@ body {
 main {
   max-width: 760px;
   margin: 0 auto;
-  background-color: black;
+  background-color: white;
   border-radius: 5px;
   box-shadow: 0px 0px 130px -50px var(--qwik-light-purple);
   overflow: hidden;
